# rwm

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp  todo.md
.github/workflows/: rust.yml
bindings/: Cargo.toml  build.rs
src/: main.rs  tray_icon.rs  winapi_wrapper.rs
winapi_connection/: window_control.cpp  window_control.hpp
