[package]
name = "rwm"
version = "0.1.0"
authors = ["Przemek <przempore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systray = "0.4.0"
libc = "0.2.80"
bindings = { path = "bindings" }
windows = "0.17.2"

[build-dependencies]
windows = "0.17.2"
